--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,10 @@
     <title></title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="content">
+        <div class="grandchild"><i class="fas fa-adjust"></i></div>
+      </div>
+    </div>
   </body>
 </html>
