--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,8 @@
+$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+
 @import 'utils/variables';
 @import 'utils/functions';
 @import 'utils/helpers';
@@ -13,18 +18,3 @@
 
 @import 'pages/home';
 @import 'pages/about';
-
-body {
-  margin: 0;
-  background-color: #cdcdcd;
-}
-
-.container {
-  background: url('~images/cat.jpg') center center no-repeat;
-  background-size: cover;
-  min-height: 100vh;
-
-  .content {
-    background: red;
-  }
-}
