--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,13 +1,91 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
   </head>
   <body>
+    <nav class="navbar">
+      <a class="brand" href="#">
+        <i class="fas fa-hotdog fa-3x"></i>
+      </a>
+      <ul class="nav-items">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Feature</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Screenshot</a>
+        </li>
+        <li class="nav-item dropdown-toggle">
+          <a class="nav-link" href="#">
+            News
+            <i class="fas fa-sort-down"></i>
+          </a>
+          <ul class="dropdown">
+            <li class="dropdown-item">
+              <a class="dropdown-link" href="#">News One</a>
+            </li>
+            <li class="dropdown-item">
+              <a class="dropdown-link" href="#">News Two</a>
+            </li>
+            <li class="dropdown-item">
+              <a class="dropdown-link" href="#">News Three</a>
+            </li>
+            <li class="dropdown-item">
+              <a class="dropdown-link" href="#">News Four</a>
+            </li>
+            <li class="dropdown-item">
+              <a class="dropdown-link" href="#">News Five</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Team</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </nav>
+
+    <button class="btn-primary">
+      <i class="fas fa-cog fa-3x"></i>
+    </button>
+
     <div class="container">
-      <div class="content">
-        <div class="grandchild"><i class="fas fa-adjust"></i></div>
+      <div class="row">
+        <div class="poster col">
+          <i class="fas fa-magic fa-3x logo"></i>
+          <h3>Creative Design</h3>
+          <p>
+            Proactively syndicate open source e-markets after low-risk
+            high-yield synergy
+          </p>
+        </div>
+        <div class="poster col">
+          <i class="fas fa-rocket fa-3x logo"></i>
+          <h3>Free Support</h3>
+          <p>
+            Proactively syndicate open source e-markets after low-risk
+            high-yield synergy
+          </p>
+        </div>
+        <div class="poster col">
+          <i class="fas fa-gem fa-3x logo"></i>
+          <h3>Exclusive Design</h3>
+          <p>
+            Proactively syndicate open source e-markets after low-risk
+            high-yield synergy
+          </p>
+        </div>
       </div>
     </div>
   </body>
