--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,20 +1,24 @@
 $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
-@import '~@fortawesome/fontawesome-free/scss/fontawesome';
-@import '~@fortawesome/fontawesome-free/scss/solid';
-@import '~@fortawesome/fontawesome-free/scss/brands';
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
 
-@import 'utils/variables';
-@import 'utils/functions';
-@import 'utils/helpers';
-@import 'utils/mixins';
+@import "utils/variables";
+@import "utils/functions";
+@import "utils/helpers";
+@import "utils/mixins";
 
-@import 'base/reset';
-@import 'base/typography';
+@import "base/reset";
+@import "base/typography";
 
-@import 'layout/grid';
-@import 'layout/header';
-@import 'layout/navigation';
-@import 'layout/footer';
+@import "components/poster";
+@import "components/dropdown";
+@import "components/buttons";
 
-@import 'pages/home';
-@import 'pages/about';
+@import "layout/grid";
+@import "layout/header";
+@import "layout/navigation";
+@import "layout/footer";
+
+@import "pages/home";
+@import "pages/about";
