--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -12,3 +12,15 @@ ul {
   list-style-type: none;
   padding: 0;
 }
+
+div {
+  margin-top: 40px;
+}
+
+h1 {
+  color: $header-color;
+}
+
+small {
+  color: $small-color;
+}
