--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
+@import "~@fortawesome/fontawesome-free/scss/regular";
 
 @import "utils/variables";
 @import "utils/functions";
@@ -14,6 +15,8 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "components/poster";
 @import "components/dropdown";
 @import "components/buttons";
+@import "components/phonebox";
+@import "components/checker_textbox";
 
 @import "layout/grid";
 @import "layout/header";
