--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -88,5 +88,66 @@
         </div>
       </div>
     </div>
+
+    <div class="row background-gray clearfix">
+      <div class="phonebox">
+        <img
+          class="phone-img"
+          src="../images/mobile-2.png"
+          alt="mobile-white"
+        />
+      </div>
+
+      <div class="checker-textbox">
+        <div class="margin-right-10">
+          <h1 class="margin-bottom-0">Make Business Easy With Us</h1>
+          <small>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ut
+            fugit alias distinctio, vero harum porro hic architecto blanditiis
+            amet minima eveniet fuga consequatur aliquid expedita saepe culpa
+            nam mollitia.
+          </small>
+        </div>
+
+        <div>
+          <div class="item">
+            <i
+              class="fas fa-rocket fa-2x logo display-block text-primary-color"
+            ></i>
+            <small>
+              Intrinsically aggregate cutting-edge internal or "organic" through
+              pandemic
+            </small>
+          </div>
+          <div class="item">
+            <i
+              class="fas fa-rocket fa-2x logo display-block text-primary-color"
+            ></i>
+            <small>
+              It doesn't matter if you're in an office or on an airplane, you'll
+              never lose a second
+            </small>
+          </div>
+          <div class="item">
+            <i
+              class="fas fa-rocket fa-2x logo display-block text-primary-color"
+            ></i>
+            <small>
+              It doesn't matter if you're in an office or on an airplane, you'll
+              never lose a second
+            </small>
+          </div>
+          <div class="item">
+            <i
+              class="fas fa-rocket fa-2x logo display-block text-primary-color"
+            ></i>
+            <small>
+              Intrinsically aggregate cutting-edge internal or "organic" through
+              pandemic
+            </small>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
