--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -9,8 +9,9 @@
 
 .row {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   margin: 0;
+  width: 100%;
 
   .col {
     box-sizing: border-box;
