--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,24 +8,24 @@
   </head>
   <body>
     <nav class="navbar">
-      <a class="brand" href="#">
+      <a class="navbar__brand" href="#">
         <i class="fas fa-hotdog fa-3x"></i>
       </a>
-      <ul class="nav-items">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+      <ul class="navbar__items">
+        <li class="navbar__item">
+          <a class="navbar__link" href="#">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+        <li class="navbar__item">
+          <a class="navbar__link" href="#">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Feature</a>
+        <li class="navbar__item">
+          <a class="navbar__link" href="#">Feature</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Screenshot</a>
+        <li class="navbar__item">
+          <a class="navbar__link" href="#">Screenshot</a>
         </li>
-        <li class="nav-item dropdown-toggle">
-          <a class="nav-link" href="#">
+        <li class="navbar__item dropdown-toggle">
+          <a class="navbar__link" href="#">
             News
             <i class="fas fa-sort-down"></i>
           </a>
@@ -47,18 +47,42 @@
             </li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Team</a>
+        <li class="navbar__item">
+          <a class="navbar__link" href="#">Team</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+        <li class="navbar__item">
+          <a class="navbar__link" href="#">Contact</a>
         </li>
       </ul>
     </nav>
-
-    <button class="btn-primary">
-      <i class="fas fa-cog fa-3x"></i>
+    <button class="btn btn--primary--reverse btn--small">
+      <i class="fas fa-cog fa-3x spin-slow"></i>
     </button>
+
+    <div class="succeed">
+      <div class="succeed__text">
+        <p class="succeed__text__margin-mini">
+          With us you will
+        </p>
+
+        <p class="succeed__text__font-size-huge succeed__text__margin-mini">
+          <b>SUCCEED</b>
+        </p>
+
+        <p class="succeed__text__margin-mini">
+          Proactively syndicate open-source e-markets after low-risk high-yield
+          synergy. Professionally simplify visionary technology.
+        </p>
+
+        <button class="btn btn--rounded-corner btn--primary">
+          READ MORE
+        </button>
+        <br />
+      </div>
+      <div class="succeed__phone">
+        <img src="../images/mobile-1.png" alt="" />
+      </div>
+    </div>
 
     <div class="container">
       <div class="row">
