--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,30 +1,44 @@
 .navbar {
   background-color: $primary-color;
   width: 100%;
+  top: 0;
   position: sticky;
+  z-index: 2;
+  box-shadow: 0 2px 5px #424242;
 
-  .brand {
+  &__brand {
     padding: 15px;
     color: #ffffff;
     display: inline-block;
   }
 
-  .nav-items {
+  &__items {
     float: right;
     cursor: pointer;
   }
 
-  .nav-item {
+  &__item {
     display: inline-block;
+
+    &::after {
+      content: "";
+      border-bottom: 5px solid transparent;
+      transform: scaleX(0);
+      display: block;
+    }
+
+    &:not(.dropdown-toggle):hover {
+      &::after {
+        border-bottom: 5px solid #ffffff;
+        transition: all 0.5s ease;
+        transform: scaleX(1);
+      }
+    }
   }
 
-  .nav-link {
+  &__link {
     padding: 20px;
     color: #ffffff;
     display: block;
-  }
-
-  .nav-item:not(.dropdown-toggle):hover {
-    border-bottom: 5px solid #ffffff;
   }
 }
